Aprendiendo lo básico

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <p>
         Hola, este es mi primer sitio web.
-        Sígueme en Twitter en @jdmoreno26 para recibir información.
+        Lo estaré llenando a medida que aprenda nuevas tecnologías.
     </p>
 </body>
 </html>
